2010-04-08: Jason Long <jlong@messiah.edu>
 * t/verifier.t: wrote some tests for DomainKey signatures with empty,
   missing, or invalid q= tag values
 * lib/Mail/DKIM/Verifier.pm: move use of check_signature_identity() out
   of finish_header() and into check_and_verify_signature(); this fixes
   an issue with getting wrong error codes when q= tag is broken.

 -- VERSION 0.38 --

2010-03-31: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature.pm, Signature.pm: avoid calling lc() on
   an undefined value (this generates warnings in Perl 5.12.x).
   Patch contributed by Mark Martinec.

2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm (load): fix bug where a private key file
   named '0' could not be loaded

2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature.pm (new): accept Key parameter when
   constructing a DomainKey signature object

2010-02-27: Jason Long <jlong@messiah.edu>
 * t/external_signer.t: test use of an alternate object for Key
   during a "sign" operation

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: document use of an alternate object for
   PrivateKey objects

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: import PrivateKey.pm in this module,
   rather than in the Algorithm modules

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm: document the sign_digest() method
 * lib/Mail/DKIM/Algorithm/*: use sign_digest() rather than
   sign_sha1_digest()

2010-01-23: Jason Long <jlong@messiah.edu>
 * t/public_key.t: test that DNS failure reason is given, when
   DNS returns no results
 * lib/Mail/DKIM/DNS.pm: bugfix (introduced by async_dns branch):
   preserve $@ in case of no error

2010-01-23: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/{DNS,Signature,PublicKey,Policy}.pm: merged my
   "async dns" branch

--BEGIN "ASYNC DNS" branch
2009-07-10: Jason Long <jlong@messiah.edu>